--- a/infini-treat/index.html
+++ b/infini-treat/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+	<p>You can click this button an infinite number of times... the Infini-Treat.</p>
 	<button type="button" class="button" onclick="generate()">Trick or treat!</button>
 	<p id="treat"></p>
 	<p id="basket"></p>
