--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-	<a href="dingv-ml.pdf">Machine Learning Primer, Dec 2017</a>
+<b>Valerie Ding</b>
+<br>BS/MS Computer Science, Stanford University
+<br><a href="mailto:valerie.ding@gmail.com">Email</a>
+<br><a href="https://www.linkedin.com/in/dingv">LinkedIn</a>
+<br><a href="https://twitter.com/vsding">Twitter</a>
+
 </body>
 
 </html>
