--- a/stream/index.html
+++ b/stream/index.html
@@ -13,7 +13,7 @@
 	This is an ephemeral <b>stream</b>-of-consciousness tool.<br>
 	You are completely anonymous.<br>
 	Start typing as if you are messaging someone,<br>
-	but don't worry, you are the only one reading your messages.<br>
+	but don't worry, you are the only one who can see your messages.<br>
 	Type into the textbox and press <b>Enter</b> to send.<br>
 	Click the <b>Clear</b> button to start over.
 	</p>
