--- a/stream/index.html
+++ b/stream/index.html
@@ -14,7 +14,7 @@
 	Start typing as if you are messaging someone,<br>
 	but don't worry, you are the only one who can see your messages.<br>
 	Type into the textbox and press <b>Enter</b> to send.<br>
-	Type <b>:clear</b> to clear all your messages and start over. 
+	Type <b>:clear</b> and press Enter to clear all your messages and start over. 
 	</p>
 	<input size="100" type="text" id="message" onkeydown="if (event.keyCode == 13) pressEnter();"></input>
 	<p id="output"></p>
