--- a/demo/index.html
+++ b/demo/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Valerie Ding</title>
+<title>Demo</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<style>
+canvas {
+    border:1px solid #d3d3d3;
+    background-color: #f1f1f1;
+}
+</style>
 </head>
 
-<body>
-<b>Valerie Ding</b>
-<br>BS/MS Computer Science, Stanford University
-<br><a href="mailto:valerie.ding@gmail.com">Email</a>
-<br><a href="https://www.linkedin.com/in/dingv">LinkedIn</a>
-<br><a href="https://twitter.com/vsding">Twitter</a>
+<body onload="startGame()">
+
+<p id="log"></p>
+
+<script src="script.js"></script>
 
 </body>
-
 </html>
