--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <br><a href="mailto:valerie.ding@gmail.com">Email</a>
 <br><a href="https://www.linkedin.com/in/dingv">LinkedIn</a>
 <br><a href="https://twitter.com/vsding">Twitter</a>
+<br>
+<br><b>Projects</b>
+<br><a href="https://github.com/dingv/goji">Goji</a>, open-source markup language, interpreter, and web rendering framework for developing gamified web experiences.
+<br><a href="adversarial-biometric-attacks.pdf">Adversarial biometric attacks on mobile devices</a>
+<br><a href="supervised-learning-methods.pdf">Supervised learning methods for biometric authentication on mobile devices</a>
 
 </body>
 
