--- a/goji/frames/index.html
+++ b/goji/frames/index.html
@@ -8,6 +8,8 @@
 <h1>U.S. Presidents</h1>
 <p id="image"><img src="img/GeorgeWashington.jpg"</p>
 <p id="description">1: George Washington, 1789-1797</p>
-<button type="button" class="button" onclick="pageflip()">Claim</button><button type="button" class="button" onclick="skip()">Skip</button><p id="score">Score: 0</p>
+<button type="button" class="button" onclick="pageflip()"><a href="mailto:dingv@cs.stanford.edu">Claim</a></button>
+<button type="button" class="button" onclick="skip()">Skip</button>
+<p id="score">Score: 0</p>
 </body>
 </html>
