--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 <br><a href="https://www.linkedin.com/in/dingv">LinkedIn</a>
 <br><a href="https://twitter.com/vsding">Twitter</a>
 <br>
-<br><b>Projects</b>
-<br><a href="https://github.com/dingv/goji">Goji</a>, open-source markup language, interpreter, and web rendering framework for developing gamified web experiences.
-<br><a href="adversarial-biometric-attacks.pdf">Adversarial biometric attacks on mobile devices</a>
-<br><a href="supervised-learning-methods.pdf">Supervised learning methods for biometric authentication on mobile devices</a>
+<br><b>Interesting things</b>
 
 </body>
 
