--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <b>Valerie Ding</b>
 <br>BS/MS Computer Science, Stanford University
 <br><a href="mailto:valerie.ding@gmail.com">Email</a>
-<br><a href="https://www.linkedin.com/in/dingv">LinkedIn</a>
-<br><a href="https://twitter.com/vsding">Twitter</a>
+<br><a href="https://www.linkedin.com/in/dingv" target="_blank">LinkedIn</a>
+<br><a href="https://twitter.com/vsding" target="_blank">Twitter</a>
 <br>
 <br><b>Interesting things</b>
 
