--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <br><a href="https://twitter.com/vsding" target="_blank">Twitter</a>
 <br>
 <br><b>Interesting things</b>
+	<a href="/papers/Dynamically_routed_capsule_nets_for_sentiment_analysis.pdf" target="_blank">
+		Dynamically routed capsule nets for sentiment analysis</a>
 
 </body>
 
