--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
 <br><a href="https://www.linkedin.com/in/dingv" target="_blank">LinkedIn</a>
 <br><a href="https://twitter.com/vsding" target="_blank">Twitter</a>
 <br>
-<br><b>Interesting things</b>
+<br><b>Link farm</b>
+	<br>06/2018: 
 	<a href="/papers/Dynamically_routed_capsule_nets_for_sentiment_analysis.pdf" target="_blank">
 		Dynamically routed capsule nets for sentiment analysis</a>
-
+	<br>12/2017:
+	<a href="/papers/adversarial-biometric-attacks.pdf" target="_blank">
+		Adversarial biometric attacks on mobile devices</a>
+	<br>12/2017:
+	<a href="/papers/supervised-learning-methods.pdf" target="_blank">
+		Supervised learning methods for biometric authentication on mobile devices</a>
 </body>
 
 </html>
